# glaip-sdk

./: README.md  cloudbuild-pr.yml  cloudbuild.yml  docker-compose.gcb.yml
cloudbuild-terraform/: locals.tf  main.tf  python.tf  terragrunt.hcl
python/: build.ci.env  build.ci.sh  publish.sh  shared.sh
python/aip-sdk/: CI_CD_SETUP.md  Makefile  README.md  cloudbuild-pr.yml  pyproject.toml
python/aip-sdk/.github/workflows/: ci.yml
python/aip-sdk/examples/: README.md  __init__.py
python/aip-sdk/examples/_shared/: README.md
python/aip-sdk/examples/demos/sdk/: 01_hello_aip_end_to_end.py
python/aip-sdk/examples/getting-started/: __init__.py
python/aip-sdk/examples/getting-started/cli/: 03_basic_agent_tool.md  03_hello_world_mcp.md  04_tool_plugin_structure.md
python/aip-sdk/examples/getting-started/sdk/: 01_hello_world_agent.py  04_calculator_tool.py  05_test_tool.py  _utils.py
python/aip-sdk/glaip_sdk/cli/: main.py
python/aip-sdk/scripts/: generate_example_docs.py
python/aip-sdk/tests/: conftest.py
python/aip-sdk/tests/integration/: README.md  cli_test_helpers.py  test_helpers.py
python/aip-sdk/tests/integration/cli/: test_cli_mcps.py  test_cli_tools.py
python/aip-sdk/tests/integration/sdk/: __init__.py  test_agent_integration.py  test_authentication_patterns.py  (+3 more)
python/aip-sdk/tests/unit/: test_cli_structure.py  test_exceptions.py
python/glaip-sdk/: .bumpversion.cfg  .env.example  .gitignore  .pre-commit-config.yaml  README.md  cloudbuild.yml  pyproject.toml  sonar-project.properties
python/glaip-sdk/docs/examples/: examples.md  examples_index.md
python/glaip-sdk/examples/: .env.example  __init__.py  __main__.py  env.example  run_examples.py
python/glaip-sdk/examples/_shared/: __init__.py  env.py  printing.py  runtime.py
python/glaip-sdk/examples/advanced/: __init__.py
python/glaip-sdk/examples/advanced/cli/: 01_error_handling_patterns.md
python/glaip-sdk/examples/advanced/sdk/: 01_error_handling_patterns.py  02_metadata_patterns.py
python/glaip-sdk/examples/demos/cli/: 01_hello_aip_end_to_end.md
python/glaip-sdk/examples/getting-started/cli/: 01_hello_world_agent.md  02_hello_world_tool.md  calculator_tool.py
python/glaip-sdk/examples/getting-started/sdk/: 02_hello_world_tool.py  03_hello_world_mcp.py
python/glaip-sdk/glaip_sdk/: models.py
python/glaip-sdk/glaip_sdk/cli/commands/: agents.py
python/glaip-sdk/scripts/: bump_version.py
python/glaip-sdk/tests/integration/cli/: __init__.py  test_cli_agents.py  test_cli_models.py
python/glaip-sdk/tests/integration/sdk/: test_resource_management.py  test_tool_integration.py
python/glaip-sdk/tests/unit/: test_models.py  test_run_renderer.py  test_utils.py
python/glaip-sdk/tests/unit/client/: test_agent_client.py  test_base_client.py  test_client_main.py  test_mcp_client.py  test_tool_client.py  test_validators.py
(+3 files in other folders)
